Infraestructure-K8s/kubernetes/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spotme
  labels:
    name: spotme
    environment: production
